--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #00000;
+    background-color: #000;
 }
 
 header {
     background-color: #000;
-    color: #fff;
+    color: #000;
     padding: 20px;
     text-align: center;
 }
@@ -34,7 +34,7 @@ header {
     padding: 10px;
     border-radius: 5px;
     text-align: center;
-    border: 1px solid #ddd;
+    border: 1px solid #000;
 }
 
 .project img {
@@ -50,7 +50,7 @@ header {
 
 .resume {
     padding: 20px;
-    background-color: #f8f8f8;
+    background-color: #000000;
     text-align: center;
     margin: 20px;
     border-radius: 5px;
