--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
 }
 
 .project {
-    background-color: #f8f8f8;
+    background-color: #000000;
     padding: 10px;
     border-radius: 5px;
     text-align: center;
@@ -67,7 +67,7 @@ header {
     margin-top: 10px;
     padding: 10px 20px;
     background-color: #007bff;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     border-radius: 5px;
 }
