--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 header {
     background-color: #000;
-    color: #000;
+    color: #fff;
     padding: 20px;
     text-align: center;
 }
@@ -34,7 +34,7 @@ header {
     padding: 10px;
     border-radius: 5px;
     text-align: center;
-    border: 1px solid #000;
+    border: 1px solid #fff;
 }
 
 .project img {
