--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ header {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #545454;
     color: #fff !important; /* Force white text */
     text-decoration: none;
     border-radius: 5px;
